# pos_fluent

./: .gitignore  blue_print.txt
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  sidecar.rs  system.rs  utils.rs  watchdog.rs
apps/web/: .env.example  .env.local  drizzle.config.ts  middleware.ts  next.config.js  package-lock.json  package.json  sekemadb.txt  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/: index.ts
apps/web/app/customers/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/inventory/: page.module.css  page.tsx
apps/web/app/login/: layout.tsx  page.tsx
apps/web/app/orders/: page.tsx
apps/web/app/pos/: page.tsx
apps/web/app/products/: page.tsx
apps/web/app/reports/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/testing/: page.tsx
apps/web/components/: error-boundary.tsx
apps/web/components/auth/: AuthProvider.tsx  ProtectedRoute.tsx
apps/web/components/keyboard/: shortcuts-help.tsx
apps/web/components/layout/: TwoColumnLayout.tsx  main-layout.tsx
apps/web/components/pos/: barcode-scanner.tsx  customer-selector.tsx  index.ts  payment-dialog.tsx  product-search.tsx  shift-management.tsx  shopping-cart.tsx  transaction-history.tsx  transaction-summary.tsx
apps/web/components/providers/: ClientProviders.tsx
apps/web/components/reports/: ExportUtils.tsx  ReportCharts.tsx
apps/web/components/tables/: TablePerformanceTest.tsx
apps/web/components/testing/: UIComponentTest.tsx
apps/web/lib/auth/: middleware.ts  use-auth.tsx
apps/web/lib/db/: config.ts  schema.ts
apps/web/lib/hooks/: index.ts  use-barcode-scanner.ts  use-pos.ts  use-shift-management.ts  use-transaction-management.ts
apps/web/lib/keyboard/: keyboard-provider.tsx  shortcuts-database.ts
apps/web/lib/print/: print-provider.tsx
apps/web/lib/services/: barcode-service.ts  index.ts  payment-service.ts  pos-service.ts  tax-service.ts  transaction-service.ts
apps/web/lib/theme/: theme-provider.tsx
apps/web/lib/utils/: cn.ts  date.ts  export.ts  (+4 more)
apps/web/styles/: globals.css
apps/web/types/: api.ts  domain.ts  index.ts  utils.ts
database/: pos_database.sql
(+38 files in other folders)
