[package]
name = "pos-kasir-suite"
version = "1.0.0"
description = "Aplikasi Point of Sale untuk Kasir Indonesia"
authors = ["POS Kasir Suite Team"]
license = "MIT"
repository = "https://github.com/pos-kasir/suite"
default-run = "pos-kasir-suite"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "app-show", "dialog-confirm", "dialog-ask", "app-hide", "window-print", "window-hide", "shell-open", "window-minimize", "dialog-open", "protocol-asset", "window-unminimize", "dialog-save", "window-start-dragging", "window-show", "window-maximize", "window-close", "window-unmaximize", "dialog-message",
  "icon-ico",
  "icon-png",
  "shell-sidecar",
  "fs-all",
  "path-all",
  "os-all",
  "notification-all"
] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"
portpicker = "0.1"
psutil = "3.2"
sysinfo = "0.29"
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_Diagnostics_ToolHelp"
] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "pos-kasir-suite"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
